# parser-benchmark

./: .autocorrectignore  Cargo.toml  README.md  go.mod  go.sum  grammar.go  grammar.peg  parser.go  parser_test.go
.github/workflows/: ci.yml
benches/: bench.rs
src/: grammar.pest  lib.rs  nom_parser.rs  parse.rs  peg_parser.rs  pest_parser.rs
tests/: example.md
